--- a/notebook/eval_llava.ipynb
+++ b/notebook/eval_llava.ipynb
@@ -25,6 +25,81 @@
     "    model_name=get_model_name_from_path(model_path)\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llava.conversation import Conversation\n",
+    "from llava.eval.run_llava import *\n",
+    "prompt = DEFAULT_IMAGE_TOKEN + \"\\n\" + \"What are the things in this image?\"\n",
+    "image_file = [\"view.jpg\"]\n",
+    "conv_mode = 'llava_v1'\n",
+    "conv = Conversation(\n",
+    "    system=\"A chat between a curious human and an artificial intelligence assistant. \"\n",
+    "           \"The assistant gives helpful, detailed, and polite answers to the human's questions.\",\n",
+    "    roles=(\"USER\", \"ASSISTANT\"),\n",
+    "    version=\"v1\",\n",
+    "    messages=(),\n",
+    "    offset=0,\n",
+    "    sep_style=SeparatorStyle.TWO,\n",
+    "    sep=\" \",\n",
+    "    sep2=\"</s>\",\n",
+    ").copy()\n",
+    "conv.append_message(conv.roles[0], prompt)\n",
+    "conv.append_message(conv.roles[1], None)\n",
+    "prompt = conv.get_prompt()\n",
+    "images = load_images(image_file)\n",
+    "images_tensor = process_images(\n",
+    "    images,\n",
+    "    image_processor,\n",
+    "    model.config\n",
+    ").to(model.device, dtype=torch.float16)\n",
+    "\n",
+    "input_ids = (\n",
+    "    tokenizer_image_token(prompt, tokenizer, IMAGE_TOKEN_INDEX, return_tensors=\"pt\")\n",
+    "    .unsqueeze(0)\n",
+    "    .cuda()\n",
+    ")\n",
+    "\n",
+    "stop_str = conv.sep if conv.sep_style != SeparatorStyle.TWO else conv.sep2\n",
+    "keywords = [stop_str]\n",
+    "stopping_criteria = KeywordsStoppingCriteria(keywords, tokenizer, input_ids)\n",
+    "\n",
+    "temperature = 0.2\n",
+    "top_p = None\n",
+    "num_beams = 1\n",
+    "max_new_tokens= 512\n",
+    "\n",
+    "with torch.inference_mode():\n",
+    "    output_ids = model.generate(\n",
+    "        input_ids,\n",
+    "        images=images_tensor,\n",
+    "        do_sample=True if temperature > 0 else False,\n",
+    "        temperature=temperature,\n",
+    "        top_p=top_p,\n",
+    "        num_beams=num_beams,\n",
+    "        max_new_tokens=max_new_tokens,\n",
+    "        use_cache=True,\n",
+    "        stopping_criteria=[stopping_criteria],\n",
+    "    )\n",
+    "input_token_len = input_ids.shape[1]\n",
+    "n_diff_input_output = (input_ids != output_ids[:, :input_token_len]).sum().item()\n",
+    "if n_diff_input_output > 0:\n",
+    "    print(\n",
+    "        f\"[Warning] {n_diff_input_output} output_ids are not the same as the input_ids\"\n",
+    "    )\n",
+    "outputs = tokenizer.batch_decode(\n",
+    "    output_ids[:, input_token_len:], skip_special_tokens=True\n",
+    ")[0]\n",
+    "outputs = outputs.strip()\n",
+    "if outputs.endswith(stop_str):\n",
+    "    outputs = outputs[: -len(stop_str)]\n",
+    "outputs = outputs.strip()\n",
+    "print(outputs)"
+   ]
   }
  ],
  "metadata": {
